syntax = "proto3";

package fintekkers.services.security_service;
import "fintekkers/requests/security/query_security_request.proto";
import "fintekkers/requests/security/query_security_response.proto";
import "fintekkers/requests/security/create_security_request.proto";
import "fintekkers/requests/security/create_security_response.proto";
import "fintekkers/requests/security/get_fields_response.proto";
import "fintekkers/requests/security/get_field_values_request.proto";
import "fintekkers/requests/security/get_field_values_response.proto";
import "fintekkers/requests/util/errors/summary.proto";
import "google/protobuf/empty.proto";

option java_generic_services = true;
option py_generic_services = true;

service Security {
    rpc CreateOrUpdate   (fintekkers.requests.security.CreateSecurityRequestProto) returns   (fintekkers.requests.security.CreateSecurityResponseProto);

    rpc GetByIds   (fintekkers.requests.security.QuerySecurityRequestProto) returns   (fintekkers.requests.security.QuerySecurityResponseProto);
    rpc Search   (fintekkers.requests.security.QuerySecurityRequestProto) returns   (stream fintekkers.requests.security.QuerySecurityResponseProto);
    rpc ListIds   (fintekkers.requests.security.QuerySecurityRequestProto) returns   (fintekkers.requests.security.QuerySecurityResponseProto);

    rpc ValidateCreateOrUpdate   (fintekkers.requests.security.CreateSecurityRequestProto) returns (fintekkers.requests.util.errors.SummaryProto);
    rpc ValidateQueryRequest   (fintekkers.requests.security.QuerySecurityRequestProto) returns (fintekkers.requests.util.errors.SummaryProto);
    
    rpc GetFields   (google.protobuf.Empty) returns   (fintekkers.requests.security.GetFieldsResponseProto);
    rpc GetFieldValues   (fintekkers.requests.security.GetFieldValuesRequestProto) returns   (fintekkers.requests.security.GetFieldValuesResponseProto);
}